--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,3 +12,8 @@ h1 {
     color: aquamarine;
     font-size: 16px;
 }
+.quote {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: gray;
+}
